//
// Copyright 2020 DXOS.org
//

syntax = "proto3";

package dxos.halo.credentials.auth;

import "./signed.proto";

//
// The payload for a SignedMessage sent during handshake for replication authentication.
//
message Auth {
  bytes partyKey = 1;     // The publicKey of the target Party for these credentials.
  bytes deviceKey = 2;    // The publicKey of the authenticating Device.
  bytes identityKey = 3;  // The publicKey of the authenticating Identity.
  bytes feedKey = 4;      // The publicKey of the authenticating Identity.
}
